Add quartile scraping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-webdriver=C:\\Users\\ahmed\\Desktop\\chromedriver.exe
+webdriver=C:\\Users\\ahmed\\Desktop\\scraping-with-selenium\\src\\main\\resources\\static\\chromedriver.exe
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=collected_articles
-server.port=8081
